--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,13 @@ seaborn==0.11.2
 numpy==1.22.0
 pandas==1.3.5
 scikit-learn==1.0.2
-tensorflow-macos==2.8.0
-tensorflow-metal==0.4.0
-Keras==2.8.0
+tensorflow-macos==2.9.0
+tensorflow-metal==0.5.0
 tensorflow-hub==0.12.0
+Keras==2.9.0
 protobuf==3.20.3
 tabulate == 0.9.0
 streamlit==1.16.0
 plotly==5.11.0
+flask==2.2.2
+filetype==1.2.0
